<resources>
    <string name="app_name">Libral Traders Dental Store</string>
    <string name="new_version_available">There is a newer version of Libral Traders Dental Store application available, click &quot;UPDATE&quot; to update now ?</string>
    <string name="maps_api_key" translatable="false">AIzaSyAlrj2rRJWWfta_4ziT59hvM4yqhe0r0Q8</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="error">Error</string>
    <string name="oops">Oops...</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="you_are_offline">You are offline</string>
    <string name="error_internet">Internet not available, Cross check your internet connectivity and try again later.</string>
    <string name="error_server">Looks like our server is down for maintenance, Please try again later.</string>
    <string name="error_request">Unable to communicate with the server at the moment. Please try again later.</string>
    <string name="error_timeout">The request has timed out. The network seems to be very slow, Please try again!!!</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="try_again">Try Again</string>
    <string name="is_required">is required</string>
    <string name="enter_a_valid">Enter a valid</string>
    <string name="colon">:</string>
    <string name="download_started">Download Started</string>
    <string name="yes_remove_it">Yes, Remove It</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="storage_acccess_permission">Access needed to download the content</string>
    <string name="update_alert_title">Update Alert</string>
    <string name="continue_text">Continue</string>
    <string name="offers">Offers</string>
    <string name="search_hint">Search for products </string>
    <string name="speak_an_item_name">Speak an item name</string>
    <string name="search_tags">Search Tags</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="popular_products">Popular Products</string>
    <string name="results_found"> Results Found</string>
    <string name="x_results_found">%d Results Found</string>
    <string name="error_while_using_flash">There has been some error while accessing flash on your device.</string>
    <string name="search_by_scanning">Search By Scanning</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="activity_title_home">Libral Traders Dental Store</string>
    <string name="press_back_to_exit">Press Back Again To Exit</string>
    <string name="search">Search</string>
    <string name="view_all">View All</string>
    <string name="view_all_x">View All %s</string>
    <string name="hello">Hello!</string>
    <string name="sign_in">Sign In</string>
    <string name="to_your_account">to your account</string>
    <string name="categories">Categories</string>
    <string name="others">Others</string>
    <string name="stores">Stores</string>
    <string name="currencies">Currencies</string>
    <string name="extras">Extras</string>
    <string name="search_terms">Search Terms</string>
    <string name="website_x">Website - %s</string>
    <string name="websites">Websites</string>
    <string name="language_x">Language - %s</string>
    <string name="languages">Languages</string>
    <string name="currency_x">Currency - %s</string>
    <string name="make_an_advanced_search">Make An Advanced Search</string>
    <string name="compare_products">Compare Products</string>
    <string name="contact_us">Contact Us</string>
    <string name="orders_and_returns">Orders And Returns</string>
    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="all">All</string>
    <string name="notifications">Notifications</string>
    <string name="offers_for_you">Offers for you</string>
    <string name="you_have_just_reached_to_the_bottom_of_page">You have just reached to the bottom of page.</string>
    <string name="back_to_top">Back to Top</string>
    <string name="action_notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="recently_viewed_products">Recently Viewed Products</string>
    <string name="app_version">App Version %s</string>
    <string name="sign_in_or_register">Sign In or Register</string>
    <string name="or">Or</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="signin_error">Error signing in</string>
    <string name="auth_succeeded">Authentication Succeed</string>
    <string name="auth_Denied">Authentication Denied</string>
    <string name="email_id_or_mobile">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logged_in">Logged in</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="please_enter_your_email_address_below_you_will_receive_a_link_to_reset_your_password_">Please enter your email address below. You will receive a link to reset your password.</string>
    <string name="email_address">Email Address</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="finger_print_login">Fingerprint Login</string>
    <string name="finger_print_login_set_msg">Do you want to set these credentials for fingerprint login?</string>
    <string name="finger_print_login_update_msg">Do you want to update these credentials for fingerprint login?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="screen_lock_not_enabled">Lock screen security not enabled in Settings. Enable it to use fingerprint login.</string>
    <string name="fingerprint_authentication_permission_not_enabled">Fingerprint authentication permission not enabled. Enable it to use fingerprint login.</string>
    <string name="register_at_least_one_fingerprint_in_settings">Register at least one fingerprint in Settings. Enable it to use fingerprint login.</string>
    <string name="authentication_help">Authentication help %s .</string>
    <string name="name_prefix">Name Prefix</string>
    <string name="select_prefix">Select Prefix</string>
    <string name="select_suffix">Select Suffix</string>
    <string name="select_gender">Select Gender</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name/Initial</string>
    <string name="last_name">Last Name</string>
    <string name="name_suffix">Name Suffix</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="tax_vat_number">Tax/VAT number</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password_match_issue">Password and confirm password must match</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="minimum_length_of_this_field_must_be_equal_or_greater_than_8_symbols_leading_and_trailing_spaces_will_be_ignored">Minimum length of this field must be equal or greater than 8 symbols. Leading and trailing spaces will be ignored.</string>
    <string name="orders">Orders</string>
    <string name="orders_again">Order Again</string>
    <string name="downloadable_products">Downloadable Products</string>
    <string name="dashboard">Dashboard</string>
    <string name="wishlist">Wish List</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="address_book">Address Book</string>
    <string name="account_information">Account Information</string>
    <string name="log_out">Log out</string>
    <string name="logout_warning">You will not be able to manage and track your orders.</string>
    <string name="logout_message">You are now logged out</string>
    <string name="activity_title_my_orders">My Orders</string>
    <string name="x_orders">%d Order(s)</string>
    <string name="order_x">Order #%s</string>
    <string name="placed_on">Placed On</string>
    <string name="ship_to">Ship To</string>
    <string name="reorder">Reorder</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="review">Review</string>
    <string name="choose_a_product_to_review">Choose a product to review</string>
    <string name="activity_title_my_downloadable_products">My Downloadable Products</string>
    <string name="remaining_downloads_x_amount">Remaining Downloads : %s</string>
    <string name="details">Details</string>
    <string name="download">Download</string>
    <string name="activity_title_my_wish_list">Wishlist</string>
    <string name="please_enter_your_comments">Please enter your comment…</string>
    <string name="sku">SKU</string>
    <string name="price_colon">Price:</string>
    <string name="qty_colon">Qty:</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="move_to_cart">Move To Cart</string>
    <string name="update_wish_list">Update Wish List</string>
    <string name="share_wish_list">Share Wish List</string>
    <string name="add_all_to_cart">Add All To Cart</string>
    <string name="remove_item">Remove Item</string>
    <string name="remove_wish_list_item_msg">This item will be removed from your wish list.</string>
    <string name="option_details">Option Details</string>
    <string name="update_comment">Update Comment</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="more">More</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="wishlist_invalid_quantity">Please enter a number greater than 0 in this field.</string>
    <string name="activity_title_my_reviews_list">My Reviews List</string>
    <string name="x_reviews">%d Review(s)</string>
    <string name="placed_on_x">Placed On %s</string>
    <string name="x_stars">%.2f Stars</string>
    <string name="activity_title_address_book">Address book</string>
    <string name="add_new_address">Add New Address</string>
    <string name="default_billing_address">Default Billing Address</string>
    <string name="default_shipping_address">Default Shipping Address</string>
    <string name="other_addresses">Other Addresses</string>
    <string name="you_have_no_other_address_entries_in_your_address_book">You have no other address entries in your address book.</string>
    <string name="remove_address_item_msg">This address will be removed from your address book.</string>
    <string name="edit">Edit</string>
    <string name="delete_your_account">Delete your Account ?</string>
    <string name="please_enter_password_for_your_account_x">Please enter password for your account: %s</string>
    <string name="qty_shipped">Qty Shipped -</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="skip">Skip</string>
    <string name="product_name">Product Name</string>
</resources>