<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="data"
            type="com.webkul.mobikul.models.homepage.OnBoardResponseModel" />

        <variable
            name="handler"
            type="com.webkul.mobikul.handlers.OnBoardActivityHandler" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_background"
        tools:context=".activities.OnBoardingActivity">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/on_board_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skip_btn"
            fontPath="fonts/Montserrat-SemiBold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/spacing_normal"
            android:text="@string/skip"
            android:drawableEnd="@drawable/ic_arrow_drop_right_line"
            android:visibility="@{safeUnbox(loading)  || data ==null||data.walkThroughData.size()==0||data.walkThroughData.size()==1? View.GONE : View.VISIBLE}"
            android:onClick="@{()->handler.onSkipClick()}"
            android:textColor="#000000"
            android:textStyle="bold"
            app:drawableTint="#000000" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottom_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="@{safeUnbox(loading) || data ==null? View.GONE : View.VISIBLE}"
            android:padding="@dimen/spacing_generic">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/previous_btn"
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_arrow_drop_left_line"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/spacing_normal"
                android:text="@string/prev"
                android:onClick="@{()->handler.onButtonClick(false)}"
                android:textColor="#000000"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible"
                app:drawableTint="#000000" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:tabBackground="@drawable/on_boarding_selector_dots_tab_layout"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/next_btn"
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableEnd="@drawable/ic_vector_right_arrow"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="@{()->handler.onButtonClick(true)}"
                android:padding="@dimen/spacing_normal"
                android:text="@string/next"
                android:textColor="#000000"
                android:textStyle="bold"
                app:drawableTint="#000000" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_infinity"
            android:background="@drawable/progress_bar_bg"
            android:indeterminate="true"
            android:visibility="@{safeUnbox(loading) ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>

</layout>