<!--
  ~ Webkul Software.
  ~
  ~ Kotlin
  ~
  ~ @author Webkul <support@webkul.com>
  ~ @category Webkul
  ~ @package com.webkul.mobikul
  ~ @copyright 2010-2019 Webkul Software Private Limited (https://webkul.com)
  ~ @license https://store.webkul.com/license.html ASL Licence
  ~ @link https://store.webkul.com/license.html
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.webkul.mobikul.models.user.OrderShipmentItem" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_background"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_generic"
        android:padding="@dimen/spacing_normal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny">

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_small" />
            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" -"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_small" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_generic"
                android:text="@{data.name}"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_small" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny">

        <androidx.appcompat.widget.AppCompatTextView
            fontPath="fonts/Montserrat-SemiBold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sku"
            android:textColor="@color/text_color_secondary"
            android:textSize="@dimen/text_size_small" />
            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" -"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_small" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_generic"
            android:text="@{data.sku}"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_small" />

    </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny">

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty_shipped"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_small" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_generic"
                android:text="@{data.qty}"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_small" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TableLayout
            android:id="@+id/option_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:orientation="vertical"
            android:visibility="@{(data.itemOption == null || data.itemOption.size() == 0) ? View.GONE :View.VISIBLE}" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>